send and receive hl7 messages

--- a/templates/basic-model.mustache
+++ b/templates/basic-model.mustache
@@ -3,10 +3,10 @@
  */
 
 import { CastError } from '..';
-import { HL7Message } from '../../hl7';
+import { Message } from '../../hl7';
 
 export class {{class}} {
-  static fromHL7(hl7: HL7Message): {{class}} {
+  static fromHL7(hl7: Message): {{class}} {
     const seg = hl7.segment('{{segment}}');
     if (seg === null) {
       throw new CastError('missing segment "{{segment}}"');
@@ -24,4 +24,13 @@ export class {{class}} {
     public {{name}}: string,
 {{/properties}}
   ) {}
+
+  toHL7Segments(): string[][] {
+    return [[
+      '{{segment}}',
+{{#fields}}
+      {{{.}}},
+{{/fields}}
+    ]];
+  }
 }
