--- a/templates/observation-model.mustache
+++ b/templates/observation-model.mustache
@@ -3,23 +3,23 @@
  */
 
 import { CastError } from '..';
-import { HL7Message } from '../../hl7';
+import { Message, toHL7DateString } from '../../hl7';
 
 export class {{class}} {
-  static fromHL7(hl7: HL7Message): {{class}} {
+  static fromHL7(hl7: Message): {{class}} {
     const msh = hl7.segment('MSH')!;
 
-    const messageType = hl7.components(msh[9]);
+    const messageType = hl7.components(msh[8]);
     if (messageType[0] !== 'ORU' || messageType[1] !== 'R01') {
       throw new CastError('wrong message type');
     }
 
-    const oru = hl7.segment('ORU');
-    if (oru === null) {
-      throw new CastError('missing ORU segment');
+    const obr = hl7.segment('OBR');
+    if (obr === null) {
+      throw new CastError('missing OBR segment');
     }
 
-    const observationId = hl7.components(oru[4]);
+    const observationId = hl7.components(obr[4]);
     if (observationId[0] !== '{{id}}') {
       throw new CastError('expected observation id "{{id}}"');
     }
@@ -30,7 +30,7 @@ export class {{class}} {
 
     const obxs = hl7.allSegments('OBX');
     for (const obx of obxs) {
-      const id = hl7.components(obx[4]);
+      const id = hl7.components(obx[3]);
       switch (id[0]) {
 {{#properties}}
         case '{{id}}': {
@@ -52,4 +52,69 @@ export class {{class}} {
     public {{name}}: string,
 {{/properties}}
   ) {}
+
+  toHL7Segments(): string[][] {
+    const now = toHL7DateString(new Date());
+    const segments: string[][] = [];
+
+    segments.push([
+      'OBR',
+      '1', // set id
+      '', // placer order number
+      '', // filler order number +
+      '{{id}}', // universal service id
+      '', // priority
+      '', // requested date/time
+      now, // observation date/time #
+      '', // observation end date/time #
+      '', // collection volume *
+      '', // collector identifier *
+      '', // specimen action code *
+      '', // danger code
+      '', // relevant clinical info
+      '', // specimen received date/time *
+      '', // specimen source *
+      '', // ordering provider
+      '', // order callback phone number
+      '', // placer field 1
+      '', // placer field 2
+      '', // filler field 1 +
+      '', // filler field 2 +
+      now, // results rpt/status chng date/time +
+      '', // charge to practice +
+      '', // diagnostic serv sect id
+      'F', // result status +
+      '', // parent result +
+      '', // quantity/timing
+      '', // result copies to
+      '', // parent *
+      '', // transportation mode
+      '', // reason for study
+    ]);
+
+{{#properties}}
+    segments.push([
+      'OBX',
+      '{{setId}}', // set id
+      '{{type}}', // value type
+      '{{id}}', // observation identifier
+      '', // observation sub-id
+      this.{{name}}, // observation value
+      '', // units
+      '', // references range
+      '', // abnormal flags
+      '', // probability
+      '', // nature of abnormal test
+      'F', // observation result status
+      '', // date last obs normal values
+      '', // user defined access checks
+      now, // date/time of the observation
+      '', // producer's id
+      '', // responsible observer
+      '', // observation method
+    ]);
+
+{{/properties}}
+    return segments;
+  }
 }
