--- a/templates/observation-model.mustache
+++ b/templates/observation-model.mustache
@@ -2,7 +2,7 @@
  * DO NOT EDIT, this is a generated file.
  */
 
-import { CastError } from '..';
+import { SerializationError } from '..';
 import { Message, toHL7DateString } from '../../hl7';
 
 export class {{class}} {
@@ -11,17 +11,17 @@ export class {{class}} {
 
     const messageType = hl7.components(msh[8]);
     if (messageType[0] !== 'ORU' || messageType[1] !== 'R01') {
-      throw new CastError('wrong message type');
+      throw new SerializationError('wrong message type');
     }
 
     const obr = hl7.segment('OBR');
     if (obr === null) {
-      throw new CastError('missing OBR segment');
+      throw new SerializationError('missing OBR segment');
     }
 
     const observationId = hl7.components(obr[4]);
     if (observationId[0] !== '{{id}}') {
-      throw new CastError('expected observation id "{{id}}"');
+      throw new SerializationError('expected observation id "{{id}}"');
     }
 
 {{#properties}}
